fix: homeNav overflow

--- a/src/components/home/nav/index.module.less
+++ b/src/components/home/nav/index.module.less
@@ -6,7 +6,7 @@
   top: 60px;
   z-index: 100;
   background-color: var(--color-bg-1);
-  overflow: auto;
+  overflow: auto hidden;
 
   &.top {
     top: 0;
@@ -14,7 +14,7 @@
 
   .lowerNav {
     max-width: 960px;
-    height: 45px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
